feat(api-gateway): setup for auth
